syntax = "proto3";

message Input {
  string txid = 1;
  uint32 utxo_index = 2;
  string sender = 3;
  string receiver = 4;
  string amount = 5;
  bool spent = 6;
}

message Output {
  string txid = 1;
  uint32 utxo_index = 2;
  string sender = 3;
  string receiver = 4;
  string amount = 5;
  bool spent = 6;
}

message TxBody {
  string msg_str = 1;
  string pubkey = 2;
  string signature = 3;
}

message Transaction {
  string txid = 1;
  repeated Input inputs = 2;
  repeated Output outputs = 3;
  TxBody body = 4;
  uint64 timestamp = 5;
  string raw = 99;
}

message Block {
  uint32 height = 1;
  uint32 version = 2;
  string previous_hash = 3;
  string block_hash = 4;
  string merkle_root = 5;
  uint64 timestamp = 6;
  uint32 bits = 7;
  uint32 nonce = 8;
  string miner_address = 9;
  repeated string tx_ids = 10;
  repeated Transaction full_transactions = 11;
}



